# curve25519-dalek

./: .travis.yml  Cargo.toml  Makefile  build.rs
benches/: dalek_benchmarks.rs
curve25519-dalek-scalar/: Cargo.toml
curve25519-dalek-scalar/src/: lib.rs  scalar.rs  traits.rs
curve25519-dalek-scalar/src/u32/: constants.rs  scalar.rs
curve25519-dalek-scalar/src/u64/: constants.rs  mod.rs  scalar.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: table_radix_256.rs
src/: edwards.rs  lib.rs  montgomery.rs  ristretto.rs  scalar.rs  window.rs
src/backend/serial/scalar_mul/: straus.rs
src/backend/serial/u32/: constants.rs  mod.rs
src/backend/serial/u64/: constants.rs  mod.rs  scalar.rs
src/backend/vector/avx2/: edwards.rs
src/backend/vector/scalar_mul/: straus.rs
