[package]
name = "curve25519-dalek"
version = "0.16.4"
authors = ["Isis Lovecruft <isis@patternsinthevoid.net>",
           "Henry de Valence <hdevalence@hdevalence.ca>"]
readme = "README.md"
license = "BSD-3-Clause"
repository = "https://github.com/dalek-cryptography/curve25519-dalek"
homepage = "https://dalek.rs/curve25519-dalek"
documentation = "https://docs.rs/curve25519-dalek"
categories = ["cryptography", "no-std"]
keywords = ["cryptography", "ristretto", "curve25519", "ECC"]
description = "A pure-Rust implementation of group operations on Ristretto and Curve25519"
exclude = [
    "**/.gitignore",
    ".gitignore",
    ".travis.yml",
]
build = "build.rs"

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", ".cargo/registry/src/github.com-1ecc6299db9ec823/curve25519-dalek-0.13.2/rustdoc-include-katex-header.html"]
features = ["nightly"]

[badges]
travis-ci = { repository = "dalek-cryptography/curve25519-dalek", branch = "master"}

[dev-dependencies]
sha2 = "0.7"
serde_cbor = "0.6"
criterion = "0.2"

[[bench]]
name = "dalek_benchmarks"
harness = false

# Note: we generate precomputed tables by building the crate twice: once as
# part of build.rs, and then once "for real".
#
# This means that the [dependencies] and [build-dependencies] sections must
# match exactly, since the build.rs uses the crate itself as a library.

[dependencies]
rand = { version = "0.5.0-pre", default-features = false, git = "https://github.com/rust-lang-nursery/rand" }
byteorder = { version = "1", default-features = false }
digest = "0.7"
generic-array = "0.9"
clear_on_drop = "=0.2.3"
subtle = { version = "0.6", features = ["generic-impls"], default-features = false }
serde = { version = "1.0", optional = true }

[build-dependencies]
rand = { version = "0.5.0-pre", default-features = false, git = "https://github.com/rust-lang-nursery/rand" }
byteorder = { version = "1", default-features = false }
digest = "0.7"
generic-array = "0.9"
clear_on_drop = "=0.2.3"
subtle = { version = "0.6", features = ["generic-impls"], default-features = false }
serde = { version = "1.0", optional = true }

[features]
nightly = ["radix_51", "subtle/nightly", "clear_on_drop/nightly"]
default = ["std"]
std = ["rand/std", "subtle/std"]
alloc = []
yolocrypto = ["avx2_backend"]
# Radix-51 arithmetic using u128
radix_51 = []
# Include precomputed basepoint tables.  This is off by default so that build.rs can generate the tables, and then re-enabled by build.rs in the main-stage compilation.
precomputed_tables = []
# experimental avx2 support
avx2_backend = ["nightly"]
