[package]
name = "curve25519-dalek-scalar"
version = "1.0.0"
authors = ["Isis Lovecruft <isis@patternsinthevoid.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = { version = "^1.2.3", default-features = false, features = ["i128"] }
digest = { version = "0.8", default-features = false }
rand_core = { version = "0.5", default-features = false }
subtle = { version = "2", default-features = false }
zeroize = { version = "1", default-features = false }

[features]
default = ["std", "u64_backend"]
alloc = ["zeroize/alloc"]
std = ["alloc", "rand_core/std"]
u32_backend = []
u64_backend = []
